# uv-pr-trials

./: .env.shared  .gitignore  .pylintrc  main.py  pyproject.toml  settings.env
example/: trystreamlit.py
lib/: shared.py
lib/constants/: __init__.py
lib/eventcache/: eventcache.py
lib/gitobj/: __init__.py  constants.py  gitpr.py
lib/mppool/: run_pool.py
lib/mylistr/: runstrtimer.py
lib/winners/: wincombo.py
status-agg/: main.py
status-agg/lib/: message_aggregator.py  shared.py  synthetic_device.py
