[project]
name = "pullrequest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygithub>=2.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = [ "E", "F", "B", "UP", "SIM", "I"]
