[project]
name = "pullrequest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.10.1",
    "pygithub>=2.6.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "debugpy>=1.8.14",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = [ "E", "F", "B", "UP", "SIM"]
